--- a/index.html
+++ b/index.html
@@ -4,10 +4,46 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Resume</title>
+  <title>Grid</title>
   <link rel="stylesheet" href="style.css" type="text/css">
-  <meta name="viewport" content="width=device-width, initial scale=1.0"
+  <meta name="viewport" content="width=device-width, initial scale=1.0">
 </head>
 <body>
+  <div class="row">
+  <div class="col col-3">
+  </div>
+  <div class="col col-3">
+  </div>
+  <div class="col col-3">
+  </div>
+  <div class="col col-3">
+  </div>
+</div>
+<div>
+  <div class="col col-4">
+  </div>
+  <div class="col col-4">
+  </div>
+  <div class="col col-4">
+</div>
+  </div>
+  <div>
+  <div class="col col-2">
+
+  </div>
+  <div class="col col-5">
+
+  </div>
+  <div class="col col-5">
+  </div>
+</div>
+<div>
+  <div class="col col-6">
+
+  </div>
+  <div class="col col-6">
+  </div>
+
+  </div>
 </body>
 </html>
